--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
         setResponse(null);
 
         try {
-          const res = await fetch('http://localhost:3000/proxy', {
+          const res = await fetch('https://lovely-sopapillas-bf4724.netlify.app/functions', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ url }),
